# VisionForge

./: .gitignore  CMakeLists.txt  LICENSE  README.md  check_spatial.py  data.yaml  gen_textures.py  world.json
.github/workflows/: ci.yml
apps/visionforge/: main.cpp
include/visionforge/: asset_manager.hpp  bbox.hpp  bbox_from_mask.hpp  bvh.hpp  camera.hpp  coco.hpp  color.hpp  config_keys.hpp  dataset_manifest.hpp  dielectric.hpp  diffuse_light.hpp  exr_writer.hpp  hdr_sky.hpp  hittable.hpp  image_texture.hpp  lambertian.hpp  mask_writer.hpp  material.hpp  mesh.hpp  mesh_triangle.hpp  meta_pose.hpp  metal.hpp  noise_texture.hpp  passes.hpp  pbr_material.hpp  pcg32.hpp  perlin.hpp  placement.hpp  png_writer.hpp  scene_graph.hpp  sky.hpp  sphere.hpp  tag.hpp  terrain.hpp  texture.hpp  transform.hpp  triangle.hpp  triplanar_material.hpp  vec3.hpp  world_config.hpp  (+4 more)
python/visionforge_loader/: README.md  pyproject.toml
python/visionforge_loader/examples/: export_pointcloud.py  train_supervision_baseline.py
python/visionforge_loader/tests/: test_exr_io_contracts.py  test_flow_e2e.py  test_geometry_extras.py  test_pointcloud.py  test_projection.py  test_train_baseline_smoke.py  test_webdataset_export.py
python/visionforge_loader/visionforge_loader/: __init__.py  cli_projection_smoke.py  dataset.py  exr_io.py  geometry.py  webdataset_export.py
runs/detect/sirius_v1/: args.yaml  results.csv
runs/detect/train/: args.yaml  results.csv
scripts/: dev_smoke.sh  merge_coco_shards.py  smoke_test.sh  validate_dataset.py
src/io/: dataset_manifest.cpp  exr_writer.cpp  png_writer.cpp  stb_image_impl.cpp
src/materials/: pbr_material.cpp
temp_out/: bboxes.csv  bboxes.json  inst.pgm  labels_coco.json  labels_from_mask.csv  labels_from_mask.json  manifest.json
test_out/: bboxes.csv  bboxes.json  inst.pgm  labels_coco.json  labels_from_mask.csv  labels_from_mask.json  labels_yolo.txt  manifest.json
test_output/: labels_yolo.txt
tests/: test_dataset_manifest.cpp  test_flow_math.cpp  test_merge_coco_shards.py  test_meta_pose.cpp  test_validate_dataset_contracts.py  test_world_config.cpp
tests/fixtures/: smoke_scenario_trajectory.json  smoke_world.json
visionforge_data/train/: labels.cache
visionforge_data/train/labels/: frame_1.txt  frame_11.txt  frame_12.txt  frame_13.txt  frame_14.txt  frame_15.txt  frame_16.txt  frame_18.txt  frame_19.txt  frame_2.txt  frame_21.txt  frame_22.txt  frame_23.txt  frame_24.txt  frame_25.txt  frame_26.txt  frame_27.txt  frame_28.txt  frame_29.txt  frame_3.txt  frame_31.txt  frame_32.txt  frame_33.txt  frame_34.txt  frame_35.txt  frame_36.txt  frame_37.txt  frame_38.txt  frame_39.txt  frame_4.txt  frame_41.txt  frame_42.txt  frame_43.txt  frame_44.txt  frame_45.txt  frame_46.txt  frame_47.txt  frame_48.txt  frame_49.txt  frame_5.txt  (+32 more)
